duniverse/menhirLib.20200211/test/static/bad/unification-error-in-depth.exp
File "unification-error-in-depth.mly", line 5, characters 13-14:
Error: how is the symbol "A" parameterized?
It is used at sorts (a) -> * and *.
The sort (a) -> * is not compatible with the sort *.
